--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,23 +4,23 @@
 url: "https://coffeebank.github.io"
 baseurl: "/moonrise"
 siteIcon: /media/android-chrome-192x192.png
-siteYear: 2020
+siteYear: 2024
 siteFooterlink: /about
 showinSearchEngines: true
 # googleAnalyticsID: (uncomment to use)
 
 
 # Set basic server info
-serverName: Moonrise MC
-serverDescription: A Minecraft server where we have lots of fun!
-serverIP: 31.41.59.26:5358
+serverName: Antasena Networks
+serverDescription: Server minecraft biasa 
+serverIP: play.antasena.fun
 useBedrockForOnlineStatus: false
 
 
 # Discord information
-discordInvite: https://discord.gg/minecraft
-discordServerID: 299881420891881473
-discordChannelID: 450428756855750666
+discordInvite: https://dc.antasena.fun
+discordServerID: 1221851148315791360
+discordChannelID: 1222035731468517517
 
 
 # # Navbar Links at the top of the page (uncomment "siteNav" to use)
