--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@
 # Change "moonrise" to your repository name
 url: "https://coffeebank.github.io"
 baseurl: "/moonrise"
-siteIcon: /media/android-chrome-192x192.png
+siteIcon: /media/antasena.png
 siteYear: 2024
 siteFooterlink: /about
 showinSearchEngines: true
